@@ -70,10 +70,10 @@ SET_TARGET_PROPERTIES(Test2Models
 )
 ADD_DEPENDENCIES (Test2Models ${PROJECT_NAME})
 
-#ADD_EXECUTABLE(	ComputeRealZMP ComputeRealZMP.cpp)
-#SET_TARGET_PROPERTIES(ComputeRealZMP
-#	              PROPERTIES
-#	              COMPILE_FLAGS ${${PROJECT_NAME}_test_CXXFLAGS}
-#		      LINK_FLAGS ${${PROJECT_NAME}_test_LDFLAGS}
-#)
-#ADD_DEPENDENCIES (ComputeRealZMP ${PROJECT_NAME})
+ADD_EXECUTABLE(	ComputeRealZMP ComputeRealZMP.cpp)
+SET_TARGET_PROPERTIES(ComputeRealZMP
+	              PROPERTIES
+	              COMPILE_FLAGS ${${PROJECT_NAME}_test_CXXFLAGS}
+		      LINK_FLAGS ${${PROJECT_NAME}_test_LDFLAGS}
+)
+ADD_DEPENDENCIES (ComputeRealZMP ${PROJECT_NAME})
